[project]
name = "maslab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fire>=0.7.0",
    "numpy>=2.3.1",
    "openai>=1.95.0",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sacrebleu>=2.5.1",
    "tenacity>=9.1.2",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "wikipedia-api>=0.8.1",
]
